huge refactoring
- move classes under package "image" into appropriate sub packages
- make LuminanceImage an interface
- remove old code